Fix taille bouton mobile

--- a/src/app/pages/home-button/home-button.component.scss
+++ b/src/app/pages/home-button/home-button.component.scss
@@ -59,7 +59,7 @@ p{
       // width: 100vh;
     }
   
-    .button {
+    .button-Kirouac {
       position: relative;
       margin-right: 5px;
       margin-left: 5px;
@@ -76,5 +76,23 @@ p{
       border: none;
       font-size: 0;
       }
+
+      .button-Kodak {
+        position: relative;
+        margin-right: 5px;
+        margin-left: 5px;
+        width: 15vw;
+        height: 15vw;
+        background: #ecebeb;
+        border-radius: 50%;
+        // box-shadow: inset 0 0 15px rgba(55, 84, 170, 0), inset 0 0 20px rgba(255, 255, 255, 0), 10px 10px 18px rgba(55, 84, 170, 0.15), -10px -10px 22px white, inset 0px 0px 4px rgba(255, 255, 255, 0.2);
+        transition: box-shadow 0.7s ease-in-out;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        outline: none;
+        border: none;
+        font-size: 0;
+        }
 
   }
